force-app/main/default/objects/Service_Relationship__c/Service_Relationship__c.object-meta.xml
<CustomObject>
    <label>Service Relationship</label>
    <nameField>
        <label>Service Relationship Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>