force-app/main/default/objects/Service_Relationship__c/fields/Allow_SMS__c.field-meta.xml
<CustomField>
  <fullName>Allow_SMS__c</fullName>
  <label>Allow SMS</label>
  <type>Checkbox</type>
  <defaultValue>true</defaultValue>
</CustomField>