force-app/main/default/objects/Service_Relationship__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
  <fullName>Business_Unit__c</fullName>
  <label>Business Unit</label>
  <type>Lookup</type>
  <referenceTo>Business_Unit__c</referenceTo>
  <relationshipLabel>Service Relationships</relationshipLabel>
  <relationshipName>Business_Unit_Service_Relationships</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>