force-app/main/default/objects/Service_Relationship__c/fields/Default_Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricebook2__c</fullName>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Service Relationships</relationshipLabel>
    <relationshipName>Default_Pricebook2_Service_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>