force-app/main/default/objects/Service_Relationship__c/fields/Default_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Terms__c</fullName>
    <label>Default Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Due on Receipt</fullName><default>true</default><label>Due on Receipt</label></value>
            <value><fullName>Net 7</fullName><default>false</default><label>Net 7</label></value>
            <value><fullName>Net 15</fullName><default>false</default><label>Net 15</label></value>
            <value><fullName>Net 30</fullName><default>false</default><label>Net 30</label></value>
            <value><fullName>Net 45</fullName><default>false</default><label>Net 45</label></value>
            <value><fullName>Net 60</fullName><default>false</default><label>Net 60</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>