force-app/main/default/objects/Service_Relationship__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Display name combining account and business unit</description>
    <formula>IF(
                NOT(ISBLANK(Lead__c)),
                Lead__r.Company &amp; &quot; | &quot; &amp; Business_Unit__r.Name,
                Account__r.Name &amp; &quot; | &quot; &amp; Business_Unit__r.Name
            )</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>