force-app/main/default/objects/Service_Relationship__c/fields/Has_Left_Review__c.field-meta.xml
<CustomField>
  <fullName>Has_Left_Review__c</fullName>
  <label>Has Left Review</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>