force-app/main/default/objects/Service_Relationship__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead/Contact</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Service Relationships</relationshipLabel>
    <relationshipName>Lead_Service_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>