force-app/main/default/objects/Service_Relationship__c/fields/Lifetime_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Revenue__c</fullName>
    <label>Lifetime Revenue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>