force-app/main/default/objects/Service_Relationship__c/fields/Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Open_Balance__c</fullName>
    <label>Open Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>