force-app/main/default/objects/Service_Relationship__c/fields/Paper_Statements__c.field-meta.xml
<CustomField>
    <fullName>Paper_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paper Statements</label>
    <type>Checkbox</type>
</CustomField>