force-app/main/default/objects/Service_Relationship__c/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
  <fullName>Tax_Exempt__c</fullName>
  <label>Tax Exempt</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>