force-app/main/default/objects/Service_Relationship__c/fields/Total_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoices__c</fullName>
    <label>Total Invoices</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>