force-app/main/default/objects/Service_Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
  <fullName>Type__c</fullName>
  <label>Relationship Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Customer</fullName><default>true</default></value>
      <value><fullName>Vendor</fullName><default>false</default></value>
      <value><fullName>Partner</fullName><default>false</default></value>
      <value><fullName>Internal</fullName><default>false</default></value>
      <value><fullName>Other</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>